Server/src/main/kotlin/com/example/p2p_stock/errors/WalletException.kt
package com.example.p2p_stock.errors

class DuplicateWalletException(message: String) : RuntimeException(message)
class NotFoundWalletException(message: String) : RuntimeException(message)
